<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.yetyman</groupId>
    <artifactId>VulkanFFM</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>vulkan-core</module>
        <module>sample-app</module>
    </modules>
    
    <profiles>
        <profile>
            <id>with-bindings</id>
            <modules>
                <module>vulkan-bindings</module>
                <module>glfw-bindings</module>
                <module>spirv-reflect-bindings</module>
                <module>shaderc-bindings</module>
                <module>vulkan-core</module>
                <module>sample-app</module>
            </modules>
        </profile>
    </profiles>

    <properties>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.4</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
